correcao no blog

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,44 @@
-# Supabase Configuration
-# Obtenha estas credenciais em: https://app.supabase.com/project/_/settings/api
+# =====================================================
+# CONFIGURAÇÕES DO SUPABASE
+# =====================================================
+# URL do projeto Supabase
+VITE_SUPABASE_URL=https://seu-projeto.supabase.co
 
-VITE_SUPABASE_URL=https://your-project.supabase.co
-VITE_SUPABASE_ANON_KEY=your-anon-key-here
+# Chave pública (anon key) do Supabase
+VITE_SUPABASE_ANON_KEY=sua-chave-publica-aqui
 
-# Optional: restrict admin routes to specific emails (comma-separated)
-VITE_ADMIN_EMAILS=admin@your-domain.com
+# =====================================================
+# CONFIGURAÇÕES DE ADMIN
+# =====================================================
+# Lista de emails de administradores separados por vírgula
+# IMPORTANTE: Se não configurado, QUALQUER usuário autenticado terá acesso admin
+# Exemplo: admin@thalitamelo.adv.br,outro@email.com
+VITE_ADMIN_EMAILS=marketing@thalitamelo.adv.br
+
+# =====================================================
+# CONFIGURAÇÕES DO SITE
+# =====================================================
+# URL base do site (para SEO e compartilhamento)
+VITE_SITE_URL=https://thalitamelo.adv.br
+
+# Nome do site
+VITE_SITE_NAME=Dra. Thalita Melo - Advocacia
+
+# =====================================================
+# CONFIGURAÇÕES DE EMAIL (OPCIONAL)
+# =====================================================
+# Se você estiver usando serviço de email
+# VITE_EMAIL_SERVICE_URL=
+# VITE_EMAIL_API_KEY=
+
+# =====================================================
+# CONFIGURAÇÕES DE ANALYTICS (OPCIONAL)
+# =====================================================
+# Google Analytics ID
+# VITE_GA_ID=G-XXXXXXXXXX
+
+# =====================================================
+# MODO DE DESENVOLVIMENTO
+# =====================================================
+# Descomente para habilitar logs detalhados
+# VITE_DEBUG=true
